# template-django-rest-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
books/: admin.py  factory.py  models.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_auto_20200824_0307.py  0003_auto_20200824_0309.py  0004_auto_20200824_0328.py  0005_auto_20200824_0354.py  0006_auto_20200824_0402.py  0007_auto_20200824_0406.py  0008_auto_20200824_0751.py  0009_auto_20200824_0752.py  0010_auto_20200824_0754.py  0011_auto_20200824_0800.py  0012_auto_20200825_0248.py  0013_auto_20200825_0251.py
config/: settings.py  urls.py
